# rust-security-framework

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  index.html
.circleci/: config.yml
.github/workflows/: main.yml
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/MacTypes_sys/: AbsoluteTime.t.html  Byte.t.html  ByteOffset.t.html  BytePtr.t.html  CharParameter.t.html  CompTimeValue.t.html  ConstLogicalAddress.t.html  ConstStr15Param.t.html  ConstStr255Param.t.html  ConstStr27Param.t.html  ConstStr31Param.t.html  ConstStr63Param.t.html  ConstStrFileNameParam.t.html  ConstStringPtr.t.html  DebugStr.v.html  Debugger.v.html  Duration.t.html  Fixed.t.html  FixedPtr.t.html  FixedRect.t.html  FixedRectPtr.t.html  Float32.t.html  Float32Point.t.html  Float64.t.html  Float80.t.html  Float96.t.html  FourCharCode.t.html  Fract.t.html  FractPtr.t.html  Handle.t.html  ItemCount.t.html  LangCode.t.html  LogicalAddress.t.html  NumVersion.t.html  NumVersionVariant.t.html  NumVersionVariantHandle.t.html  NumVersionVariantPtr.t.html  OSErr.t.html  OSType.t.html  OSTypePtr.t.html  (+228 more)
doc/core_foundation/: all.html  impl_CFTypeDescriptionGeneric.m.html  impl_TCFTypeGeneric.m.html  index.html  macro.declare_TCFType.html  macro.impl_CFComparison.html  macro.impl_CFTypeDescription.html  macro.impl_CFTypeDescriptionGeneric.html  macro.impl_TCFType.html  macro.impl_TCFTypeGeneric.html  sidebar-items.js
doc/core_foundation/array/: FromVoid.t.html  ItemRef.t.html  fn.CFArrayCreate.html  fn.CFArrayCreateCopy.html  fn.CFArrayGetCount.html  fn.CFArrayGetTypeID.html  fn.CFArrayGetValueAtIndex.html  fn.CFArrayGetValues.html  index.html  sidebar-items.js  static.kCFTypeArrayCallBacks.html  struct.CFArray.html  struct.CFArrayCallBacks.html  struct.CFArrayIterator.html  struct.ItemRef.html  struct.__CFArray.html  trait.FromVoid.html  type.CFArrayCopyDescriptionCallBack.html  type.CFArrayEqualCallBack.html  type.CFArrayRef.html  type.CFArrayReleaseCallBack.html  type.CFArrayRetainCallBack.html  type.CFIndex.html
doc/core_foundation/base/: CFAllocator.t.html  CFAllocatorAllocate.v.html  CFAllocatorCreate.v.html  CFAllocatorDeallocateCallBack.t.html  CFAllocatorGetContext.v.html  CFAllocatorGetDefault.v.html  CFAllocatorGetPreferredSizeForSize.v.html  CFAllocatorGetTypeID.v.html  CFAllocatorPreferredSizeCallBack.t.html  CFAllocatorReleaseCallBack.t.html  CFAllocatorRetainCallBack.t.html  CFComparisonResult.t.html  enum.CFComparisonResult.html  fn.CFAllocatorAllocate.html  fn.CFAllocatorCreate.html  fn.CFAllocatorDeallocate.html  fn.CFAllocatorGetContext.html  fn.CFAllocatorGetDefault.html  fn.CFAllocatorGetPreferredSizeForSize.html  fn.CFAllocatorGetTypeID.html  fn.CFAllocatorReallocate.html  fn.CFAllocatorSetDefault.html  fn.CFCopyDescription.html  fn.CFEqual.html  fn.CFGetRetainCount.html  fn.CFGetTypeID.html  fn.CFHash.html  fn.CFRelease.html  fn.CFRetain.html  fn.CFShow.html  index.html  sidebar-items.js  static.kCFAllocatorDefault.html  static.kCFAllocatorMalloc.html  static.kCFAllocatorMallocZone.html  static.kCFAllocatorNull.html  static.kCFAllocatorSystemDefault.html  static.kCFAllocatorUseContext.html  static.kCFNull.html  struct.CFAllocator.html  (+24 more)
doc/core_foundation/boolean/: fn.CFBooleanGetTypeID.html  index.html  static.kCFBooleanFalse.html  static.kCFBooleanTrue.html  (+2 more)
doc/core_foundation_sys/: all.html  index.html  sidebar-items.js
doc/security_framework/: all.html  index.html
doc/security_framework_sys/: all.html  index.html  sidebar-items.js
ios-shim/: Cargo.toml
ios-shim/src/: iospw.h  lib.rs
ios-shim/tests/: direct.rs  ios_macos.rs
ios-tester/ios-tester/: ContentView.swift  PasswordOps.swift  ios_testerApp.swift  iospw-Bridging-Header.h
ios-tester/ios-tester.xcodeproj/: project.pbxproj
ios-tester/ios-testerTests/: ios_testerTests.swift
ios-tester/ios-testerUITests/: ios_testerUITests.swift  ios_testerUITestsLaunchTests.swift
iostest/: Cargo.toml
iostest/ios-test-harness/ios-test-harness/: ContentView.swift  ios_test_harnessApp.swift
iostest/ios-test-harness/ios-test-harness.xcodeproj/: project.pbxproj
iostest/ios-test-harness/ios-test-harnessTests/: ios_test_harnessTests.swift
iostest/ios-test-harness/test-runner/: TestRunner.swift  create-library.sh  remove-library.sh  test-Bridging-Header.h  test.h
iostest/src/: lib.rs
iostest/tests/: ios_macos.rs
security-framework/: Cargo.toml
security-framework-sys/: Cargo.toml
security-framework-sys/src/: access.rs  access_control.rs  base.rs  certificate.rs  cipher_suite.rs  cms.rs  code_signing.rs  digest_transform.rs  encrypt_transform.rs  identity.rs  import_export.rs  item.rs  key.rs  keychain.rs  keychain_item.rs  lib.rs  passwords.rs  policy.rs  random.rs  secure_transport.rs  secure_transport_priv.rs  sign_verify_transform.rs  transform.rs  trust.rs  trust_settings.rs
security-framework/examples/: Info.plist  biometric_password.rs  client.rs  entitlements.plist  find_internet_password.rs  set_internet_password.rs
security-framework/src/: access.rs  access_control.rs  authorization.rs  base.rs  certificate.rs  cipher_suite.rs  cms.rs  dlsym.rs  identity.rs  import_export.rs  item.rs  key.rs  keychain.rs  keychain_item.rs  lib.rs  passwords.rs  passwords_options.rs  policy.rs  random.rs  secure_transport.rs  trust.rs  trust_settings.rs  utils.rs
security-framework/src/os/: mod.rs
security-framework/src/os/macos/: access.rs  certificate.rs  certificate_oids.rs  code_signing.rs  digest_transform.rs  encrypt_transform.rs  identity.rs  import_export.rs  item.rs  key.rs  keychain.rs  keychain_item.rs  mod.rs  passwords.rs  secure_transport.rs  transform.rs
security-framework/src/secure_transport/: ffi.rs  mod.rs
security-framework/test/: ca.der  dhparam.der  empty.keychain  regen-certs.sh  server.crt  server.der  server.key  server.keychain  server.p12
security-framework/test/cms/: encrypted.p7m  keystore.p12  signed-encrypted.p7m  signed.p7m
src/: lib.rs
systest/: Cargo.toml  build.rs
systest/priv-headers/: SecureTransportPriv.h
systest/src/: main.rs
(+1618 files in other folders)
