[package]
name = "iostest"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
core-foundation = "0.9.2"
security-framework = { path = "../security-framework" }
security-framework-sys = { path = "../security-framework-sys" }

[dev-dependencies]
rand = "0.8.4"
serial_test = "0.5.1"

[package.metadata.release]
release = false
