[package]
name = "iostest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
core-foundation = "0.9.3"
security-framework = { path = "../security-framework" }
security-framework-sys = { path = "../security-framework-sys" }

[dev-dependencies]
rand = "0.8.5"
serial_test = "3.0"

[package.metadata.release]
release = false

[lints]
workspace = true
