[package]
name = "security-framework-sys"
version = "0.2.2"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Security Framework bindings"
repository = "https://github.com/kornelski/rust-security-framework"
documentation = "https://kornelski.github.io/rust-security-framework/doc/v0.2/security_framework_sys"
readme = "README.md"
keywords = ["ffi", "iOS", "TLS", "SSL", "crypto"]
categories = ["os::macos-apis", "external-ffi-bindings"]
build = "build.rs"

[dependencies]
libc = "0.2"
MacTypes-sys = "1.1.0"
core-foundation-sys = "0.5.1"

[features]
OSX_10_9 = []
OSX_10_10 = ["OSX_10_9"]
OSX_10_11 = ["OSX_10_10"]
OSX_10_12 = ["OSX_10_11"]
OSX_10_13 = ["OSX_10_12"]
