[package]
name = "security-framework-sys"
version = "0.3.1-beta.1"
authors = ["Steven Fackler <sfackler@gmail.com>", "Kornel <kornel@geekhood.net>"]
license = "MIT/Apache-2.0"
description = "Apple `Security.framework` low-level FFI bindings"
repository = "https://github.com/kornelski/rust-security-framework"
homepage = "https://crates.rs/crates/security-framework-sys"
documentation = "https://kornelski.github.io/rust-security-framework/doc/v0.2/security_framework_sys"
readme = "README.md"
keywords = ["ffi", "iOS", "TLS", "SSL", "crypto"]
categories = ["os::macos-apis", "external-ffi-bindings"]

[dependencies]
libc = "0.2.47"
core-foundation-sys = "0.6.2"

[features]
OSX_10_9 = []
OSX_10_10 = ["OSX_10_9"]
OSX_10_11 = ["OSX_10_10"]
OSX_10_12 = ["OSX_10_11"]
OSX_10_13 = ["OSX_10_12"]
