[package]
name = "security-framework-sys"
version = "2.6.1"
authors = ["Steven Fackler <sfackler@gmail.com>", "Kornel <kornel@geekhood.net>"]
license = "MIT OR Apache-2.0"
description = "Apple `Security.framework` low-level FFI bindings"
repository = "https://github.com/kornelski/rust-security-framework"
homepage = "https://lib.rs/crates/security-framework-sys"
documentation = "https://kornelski.github.io/rust-security-framework/doc/security_framework_sys"
readme = "README.md"
keywords = ["ffi", "iOS", "TLS", "SSL", "crypto"]
categories = ["os::macos-apis", "external-ffi-bindings"]
edition = "2018"

[dependencies]
core-foundation-sys = "0.8.3"
libc = "0.2.112"

[features]
default = ["OSX_10_9"]
OSX_10_9 = []
OSX_10_10 = ["OSX_10_9"]
OSX_10_11 = ["OSX_10_10"]
OSX_10_12 = ["OSX_10_11"]
OSX_10_13 = ["OSX_10_12"]
OSX_10_14 = ["OSX_10_13"]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]

[badges]
maintenance = { status = "passively-maintained" }
