[package]
name = "security-framework"
version = "2.3.1"
authors = ["Steven Fackler <sfackler@gmail.com>", "Kornel <kornel@geekhood.net>"]
license = "MIT OR Apache-2.0"
description = "Security.framework bindings for macOS and iOS"
repository = "https://github.com/kornelski/rust-security-framework"
documentation = "https://docs.rs/security_framework"
homepage = "https://lib.rs/crates/security_framework"
categories = ["os::macos-apis", "cryptography", "api-bindings"]
readme = "README.md"
keywords = ["iOS", "TLS", "SSL", "crypto", "keychain"]
exclude = ["test/*"]
edition = "2018"

[dependencies]
security-framework-sys = { version = "2.3.0", default-features = false, path = "../security-framework-sys" }
core-foundation = "0.9.1"
core-foundation-sys = "0.8.2"
bitflags = "1.2.1"
libc = "0.2.95"
log = { version = "0.4.14", optional = true }
num = "0.4.0"

[dev-dependencies]
tempdir = "0.3.7"
hex = "0.4.3"
env_logger = "0.8.3"
x509-parser = "0.10.0"

[features]
default = ["OSX_10_9"]
alpn = []
session-tickets = []

OSX_10_9 = ["security-framework-sys/OSX_10_9"]
OSX_10_10 = ["OSX_10_9", "security-framework-sys/OSX_10_10"]
OSX_10_11 = ["OSX_10_10", "security-framework-sys/OSX_10_11"]
OSX_10_12 = ["OSX_10_11", "security-framework-sys/OSX_10_12"]
OSX_10_13 = ["OSX_10_12", "security-framework-sys/OSX_10_13", "alpn", "session-tickets"]
OSX_10_14 = ["OSX_10_13", "security-framework-sys/OSX_10_14"]

nightly = [] # not used, doesn't do anything, only for back compat

[[example]]
name = "client"

[[example]]
name = "find_internet_password"

[[example]]
name = "set_internet_password"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]

[badges]
maintenance = { status = "passively-maintained" }
