[package]
name = "security-framework"
version = "2.6.1"
authors = ["Steven Fackler <sfackler@gmail.com>", "Kornel <kornel@geekhood.net>"]
license = "MIT OR Apache-2.0"
description = "Security.framework bindings for macOS and iOS"
repository = "https://github.com/kornelski/rust-security-framework"
documentation = "https://docs.rs/security_framework"
homepage = "https://lib.rs/crates/security_framework"
categories = ["os::macos-apis", "cryptography", "api-bindings"]
readme = "README.md"
keywords = ["iOS", "TLS", "SSL", "crypto", "keychain"]
exclude = ["test/*"]
edition = "2018"

[dependencies]
security-framework-sys = { version = "2.6.0", default-features = false, path = "../security-framework-sys" }
core-foundation = "0.9.2"
core-foundation-sys = "0.8.3"
bitflags = "1.3.2"
libc = "0.2.100"
log = { version = "0.4.14", optional = true }
num-bigint = { version = "0.4.3", optional = true }

[dev-dependencies]
tempdir = "0.3.7"
hex = "0.4.3"
env_logger = "0.9.0"
x509-parser = "0.12.0"

[features]
default = ["OSX_10_9"]
alpn = []
session-tickets = []
# deprecated, do not use
serial-number-bigint = ["num-bigint"]

OSX_10_9 = ["security-framework-sys/OSX_10_9"]
OSX_10_10 = ["OSX_10_9", "security-framework-sys/OSX_10_10"]
OSX_10_11 = ["OSX_10_10", "security-framework-sys/OSX_10_11"]
OSX_10_12 = ["OSX_10_11", "security-framework-sys/OSX_10_12"]
OSX_10_13 = ["OSX_10_12", "security-framework-sys/OSX_10_13", "alpn", "session-tickets", "serial-number-bigint"]
OSX_10_14 = ["OSX_10_13", "security-framework-sys/OSX_10_14"]

nightly = [] # not used, doesn't do anything, only for back compat

[[example]]
name = "client"

[[example]]
name = "find_internet_password"

[[example]]
name = "set_internet_password"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]

[badges]
maintenance = { status = "passively-maintained" }
