[package]
name = "security-framework"
version = "2.7.0"
authors = ["Steven Fackler <sfackler@gmail.com>", "Kornel <kornel@geekhood.net>"]
license = "MIT OR Apache-2.0"
description = "Security.framework bindings for macOS and iOS"
repository = "https://github.com/kornelski/rust-security-framework"
documentation = "https://docs.rs/security_framework"
homepage = "https://lib.rs/crates/security_framework"
categories = ["os::macos-apis", "cryptography", "api-bindings"]
readme = "README.md"
keywords = ["iOS", "TLS", "SSL", "crypto", "keychain"]
exclude = ["test/*"]
edition = "2021"
rust-version = "1.56"

[dependencies]
security-framework-sys = { version = "2.6.0", default-features = false, path = "../security-framework-sys" }
core-foundation = "0.9.3"
core-foundation-sys = "0.8.3"
bitflags = "1.3.2"
libc = "0.2.126"
log = { version = "0.4.17", optional = true }
num-bigint = { version = "0.4.3", optional = true }

[dev-dependencies]
tempdir = "0.3.7"
hex = "0.4.3"
env_logger = "0.9.0"
x509-parser = "0.14.0"
time = "0.3.7"

[features]
default = ["OSX_10_9"]
alpn = []
session-tickets = []
job-bless = []
# deprecated, do not use
serial-number-bigint = ["num-bigint"]

OSX_10_9 = ["security-framework-sys/OSX_10_9"]
OSX_10_10 = ["OSX_10_9", "security-framework-sys/OSX_10_10"]
OSX_10_11 = ["OSX_10_10", "security-framework-sys/OSX_10_11"]
OSX_10_12 = ["OSX_10_11", "security-framework-sys/OSX_10_12"]
OSX_10_13 = ["OSX_10_12", "security-framework-sys/OSX_10_13", "alpn", "session-tickets", "serial-number-bigint"]
OSX_10_14 = ["OSX_10_13", "security-framework-sys/OSX_10_14"]
OSX_10_15 = ["OSX_10_14", "security-framework-sys/OSX_10_15"]

nightly = [] # not used, doesn't do anything, only for back compat

[[example]]
name = "client"

[[example]]
name = "find_internet_password"

[[example]]
name = "set_internet_password"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]

[badges]
maintenance = { status = "passively-maintained" }
