[package]
name = "systest"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
publish = false

[dependencies]
core-foundation-sys = "0.8.3"
security-framework-sys = { path = "../security-framework-sys" }
libc = "0.2.112"

[build-dependencies]
ctest = "0.2.22"

[features]
OSX_10_9 = ["security-framework-sys/OSX_10_9"]
OSX_10_10 = ["OSX_10_9", "security-framework-sys/OSX_10_10"]
OSX_10_11 = ["OSX_10_10", "security-framework-sys/OSX_10_11"]
OSX_10_12 = ["OSX_10_11", "security-framework-sys/OSX_10_12"]
OSX_10_13 = ["OSX_10_12", "security-framework-sys/OSX_10_13"]

[package.metadata.release]
release = false
