[package]
name = "systest"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
publish = false

[dependencies]
core-foundation-sys = "0.8.3"
security-framework-sys = { path = "../security-framework-sys" }
libc = "0.2.139"

[build-dependencies]
ctest2 = "0.4.8"

[package.metadata.release]
release = false

[lints.clippy]
all = "allow"

[lints.rust]
missing_abi = "allow"
